--- a/pom.xml
+++ b/pom.xml
@@ -2,21 +2,21 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>uk.ac.gate</groupId>
   <artifactId>gatetool-runpipeline</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>2.0-SNAPSHOT</version>
   <name>${project.artifactId}</name>
-  <description>My wonderfull scala app</description>
+  <description>A tool to run GATE pipelines from the command line</description>
   <inceptionYear>2015</inceptionYear>
   <licenses>
     <license>
-      <name>My License</name>
-      <url>http://....</url>
+      <name>BSD</name>
+      <url>https://opensource.org/licenses/BSD-3-Clause</url>
       <distribution>repo</distribution>
     </license>
   </licenses>
 
   <properties>
-    <maven.compiler.source>1.6</maven.compiler.source>
-    <maven.compiler.target>1.6</maven.compiler.target>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
     <encoding>UTF-8</encoding>
     <scala.version>2.12.1</scala.version>
     <scala.compat.version>2.12</scala.compat.version>
@@ -29,27 +29,6 @@
       <version>${scala.version}</version>
     </dependency>
 
-    <!-- Test -->
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.11</version>
-      <scope>test</scope>
-    </dependency>
-    <!--
-    <dependency>
-      <groupId>org.specs2</groupId>
-      <artifactId>specs2-core_${scala.compat.version}</artifactId>
-      <version>2.4.16</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.scalatest</groupId>
-      <artifactId>scalatest_${scala.compat.version}</artifactId>
-      <version>2.2.4</version>
-      <scope>test</scope>
-    </dependency>
-    -->
 <dependency>
 	    <groupId>org.rogach</groupId>
 	        <artifactId>scallop_2.12</artifactId>
@@ -59,7 +38,8 @@
 	    <dependency>
 		        <groupId>uk.ac.gate</groupId>
 			    <artifactId>gate-core</artifactId>
-			        <version>8.4.1</version>
+			         <version>8.4.1</version> 
+        <!-- <version>8.5-SNAPSHOT</version> -->
 			</dependency>
 
   </dependencies>
