--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>uk.ac.gate</groupId>
   <artifactId>gatetool-runpipeline</artifactId>
-  <version>2.0-SNAPSHOT</version> 
+  <version>2.1-SNAPSHOT</version> 
   <name>${project.artifactId}</name>
   <description>A tool to run GATE pipelines from the command line</description>
   <inceptionYear>2015</inceptionYear>
@@ -36,8 +36,7 @@
     <dependency>
       <groupId>uk.ac.gate</groupId>
       <artifactId>gate-core</artifactId>
-      <version>8.4.1</version>
-      <!-- <version>8.5-SNAPSHOT</version> -->
+      <version>8.5-alpha1</version>
     </dependency>
   </dependencies>
   <build>
